kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web 
spec:
  backend:
    serviceName: web
    servicePort: 3000
